# simpledns

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: clippy-annotations.yml
src/: app.rs  dnssec.rs  main.rs  server.rs
